<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:src="@drawable/ico_verify" android:layout_gravity="center" android:layout_marginTop="50dp"/>
    <co.tara.tarabari.passenger.myview.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/verify_explan" android:layout_marginTop="30dp" android:layout_marginLeft="60dp" android:layout_marginRight="60dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">

        <co.tara.tarabari.passenger.myview.MyEditText
            android:id="@+id/edt_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/verifyCode" />
    </android.support.design.widget.TextInputLayout>

    <co.tara.tarabari.passenger.myview.MyButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:text="@string/verifyBtn"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_verify"
        android:textColor="#ffffff"
        android:background="@drawable/welcome_register_btn"
        android:layout_gravity="center"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="horizontal" android:padding="10dp">
    <co.tara.tarabari.passenger.myview.MyTextView
        android:layout_width="0dp"
        android:layout_height="match_parent" android:layout_weight="1" android:text="@string/anotherPhone"/>
    <co.tara.tarabari.passenger.myview.MyTextView
        android:layout_width="0dp"
        android:id="@+id/btnReverification"
        android:layout_height="match_parent" android:layout_weight="1" android:text="@string/Reverify" />

</LinearLayout>
</LinearLayout>