<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:background="@drawable/walktrough_header"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <co.tara.tarabari.passenger.myview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:textColor="@color/welcome_color"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view" android:layout_marginTop="20dp" />


            <co.tara.tarabari.passenger.myview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explan1"
                android:textAlignment="center"
                android:layout_below="@+id/view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">


                <co.tara.tarabari.passenger.myview.MyButton
                    android:id="@+id/btn_login"
                    android:layout_height="60dp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:textSize="20dp"
                    android:text="@string/login"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/welcome_login_btn"
                    android:textColor="@color/register_btn"/>

                <co.tara.tarabari.passenger.myview.MyButton
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="60dp"
                    android:text="@string/register"
                    android:background="@drawable/welcome_register_btn"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:textSize="20dp"
                    />


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>