<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingTop="3dp"
            android:src="@drawable/ico_options" />

        <co.tara.tarabari.passenger.myview.MyTextView
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView"
            android:text="@string/trip_choise"
            android:textSize="20dp" />

        <co.tara.tarabari.passenger.myview.MyTextView
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/view4"
            android:layout_alignRight="@+id/view4"
            android:layout_below="@+id/view4"
            android:text="@string/addDetaile"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#5a000000"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.70">

        <android.support.v7.widget.CardView
            android:id="@+id/view5"

            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            >

            <RelativeLayout
                android:id="@+id/second_tripBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialog_card">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_second_destination"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"

                    android:id="@+id/imageView8" />

                <co.tara.tarabari.passenger.myview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secondTripChoise"
                    android:textColor="#ffffff"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageView8"
                    android:id="@+id/myTextView9" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/view6"
            style="@style/CardView.Dark"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/view5"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp">

            <RelativeLayout
                android:id="@+id/sweepBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialog_card">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_sweep"
                   android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"

                    android:id="@+id/imageView9" />
                <co.tara.tarabari.passenger.myview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/imageView9"
                    android:layout_marginRight="20dp"
                    android:text="@string/sweep"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardView.Dark"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/view6"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:id="@+id/cardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialog_card"
                android:id="@+id/stopTimeBtn">

                <co.tara.tarabari.passenger.myview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/imageView10"
                    android:text="@string/stopTime"
                    android:textColor="#ffffff" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_stop_period"
              android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"

                    android:id="@+id/imageView10" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <co.tara.tarabari.passenger.myview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="مبلغ : "
            android:id="@+id/myTextView"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true" />

        <co.tara.tarabari.passenger.myview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000"

            android:id="@+id/myCost"
            android:layout_alignBottom="@+id/myTextView"
            android:layout_toLeftOf="@+id/myTextView"
            android:layout_toStartOf="@+id/myTextView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10">

        <co.tara.tarabari.passenger.myview.MyButton
            android:id="@+id/okDialogBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="#ffffff" />

    </RelativeLayout>
</LinearLayout>