<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="@color/background"
    android:padding="10dp"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/finalTripLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33">

            <co.tara.tarabari.passenger.myview.MyTextView
                android:id="@+id/view9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imageView5"
                android:gravity="right"
                android:text="@string/cost" />

            <co.tara.tarabari.passenger.myview.MyTextView
                android:id="@+id/txt_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/view9"
                android:gravity="center"
                android:text="110،000"
                android:textColor="@color/colorPrimary" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="7dp"
                android:src="@drawable/ico_peyment" />

            <co.tara.tarabari.passenger.myview.MyTextView
                android:id="@+id/view10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/txt_cost"
                android:gravity="right"
                android:text="@string/Rial"

                />

            <ProgressBar
                android:id="@+id/costProgress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/view9" />

            <co.tara.tarabari.passenger.myview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:layout_marginLeft="20dp"
              android:textSize="10dp"
               android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="جزییات هزینه" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33">

            <co.tara.tarabari.passenger.myview.MyTextView

                android:id="@+id/finalTripBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@color/register_btn"
                android:textSize="20sp"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/finalaccept"
                android:textColor="#ffffff" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>